Fix language detection

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,8 @@
-/mvnw text eol=lf
-*.cmd text eol=crlf
-/target
+# Ignore frontend files for language detection
+*.html linguist-detectable=false
+*.css linguist-detectable=false
+*.js linguist-detectable=false
+
+# Optional (ignore bootstrap & images)
+*.png linguist-detectable=false
+*.jpg linguist-detectable=false
